<resources>
    <string name="app_name">Car Social</string>
    <string name="facebook_app_id">203434823873162</string>
    <string name="fb_login_protocol_scheme">fb203434823873162</string>
    <string name="navigation_drawer_open"> Open Navigation Drawer</string>
    <string name="navigation_drawer_close"> Close Navigation Drawer</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="timeFormat">Time</string>
    <string name="dateFormat">Date</string>
    <string name="period">"EE, dd"</string>

    <!-- FOLDING -->

    <string name="price_mock" translatable="false">25€</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">PARTIDA</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">CHEGADA</string>
    <string name="sender_badge" translatable="false">CONDUTOR</string>
    <string name="client_name_mock" translatable="false">Fernando</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">ORIGEM</string>
    <string name="to_badge" translatable="false">DESTINO</string>
    <string name="delivery_date_badge" translatable="false">INÍCIO DA VIAGEM</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">MATRÍCULA</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">CONFIRMAR</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">Porto - Rua Manuel Carqueja, 207</string>
    <string name="content_to_mock">Maia - Lugar do Espido, Via Norte</string>
    <string name="avatar_name">Fernando</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="earlyGo">A que horas nos encontramos de manhã?</string>
    <string name="lateGo">Por que horas combinamos a saída?</string>
    <string name="calendar_selection">Quando vais?</string>
    <string name="pickup">Queres partir de onde?</string>
    <string name="leave">Para onde vais?</string>
    <string name="price">10</string>
    <string name="currency">€</string>
    <string name="RidePriceText">Qual o preço por cada lugar?</string>
    <string name="RideSeatsText">Quantos passageiros podes levar?</string>
    <string name="Car">VEÍCULO</string>
    <string name="smoke">Não é permitido fumar</string>
    <string name="pets">Não são permitidos animais</string>

    //API Key
    <string name="google_maps">AIzaSyD_rFRqKspnWo1BQaYBbIDxgbq7cJQlxf8</string>

</resources>
